; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/ibmvscsi/extr_ibmvfc.c_ibmvfc_reenable_crq_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/ibmvscsi/extr_ibmvfc.c_ibmvfc_reenable_crq_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibmvfc_host = type { i32 }
%struct.vio_dev = type { i32 }

@H_ENABLE_CRQ = common dso_local global i32 0, align 4
@H_IN_PROGRESS = common dso_local global i32 0, align 4
@H_BUSY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Error enabling adapter (rc=%d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ibmvfc_host*)* @ibmvfc_reenable_crq_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ibmvfc_reenable_crq_queue(%struct.ibmvfc_host* %0) #0 {
  %2 = alloca %struct.ibmvfc_host*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.vio_dev*, align 8
  store %struct.ibmvfc_host* %0, %struct.ibmvfc_host** %2, align 8
  store i32 0, i32* %3, align 4
  %5 = load %struct.ibmvfc_host*, %struct.ibmvfc_host** %2, align 8
  %6 = getelementptr inbounds %struct.ibmvfc_host, %struct.ibmvfc_host* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.vio_dev* @to_vio_dev(i32 %7)
  store %struct.vio_dev* %8, %struct.vio_dev** %4, align 8
  br label %9

9:                                                ; preds = %32, %1
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = call i32 @msleep(i32 100)
  br label %14

14:                                               ; preds = %12, %9
  %15 = load i32, i32* @H_ENABLE_CRQ, align 4
  %16 = load %struct.vio_dev*, %struct.vio_dev** %4, align 8
  %17 = getelementptr inbounds %struct.vio_dev, %struct.vio_dev* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @plpar_hcall_norets(i32 %15, i32 %18)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %14
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* @H_IN_PROGRESS, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %32, label %24

24:                                               ; preds = %20
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* @H_BUSY, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %32, label %28

28:                                               ; preds = %24
  %29 = load i32, i32* %3, align 4
  %30 = call i64 @H_IS_LONG_BUSY(i32 %29)
  %31 = icmp ne i64 %30, 0
  br label %32

32:                                               ; preds = %28, %24, %20
  %33 = phi i1 [ true, %24 ], [ true, %20 ], [ %31, %28 ]
  br i1 %33, label %9, label %34

34:                                               ; preds = %32
  %35 = load i32, i32* %3, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %34
  %38 = load %struct.ibmvfc_host*, %struct.ibmvfc_host** %2, align 8
  %39 = getelementptr inbounds %struct.ibmvfc_host, %struct.ibmvfc_host* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* %3, align 4
  %42 = call i32 @dev_err(i32 %40, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %41)
  br label %43

43:                                               ; preds = %37, %34
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local %struct.vio_dev* @to_vio_dev(i32) #1

declare dso_local i32 @msleep(i32) #1

declare dso_local i32 @plpar_hcall_norets(i32, i32) #1

declare dso_local i64 @H_IS_LONG_BUSY(i32) #1

declare dso_local i32 @dev_err(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
